# eye-contact

./: .gitignore  .gitmodules  AnimatedEyes.hpp  CMakeLists.txt  Color.cpp  Color.hpp  Draw.hpp  FPSCounter.hpp  FaceDetector.hpp  FunctionTimer.hpp  Image.cpp  Image.hpp  ImageIO.cpp  ImageIO.hpp  MovingAverage.hpp  RemoteEyes.hpp  V4LCamera.cpp  V4LCamera.hpp  main.cpp
models/: models.md
